# FoAI-Model

./: .commitlintrc.yml  .gitignore  .pytest.ini  .releaserc.json  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  commitlint.yml  generate-notebooks.yml  publish.yml  release.yml  release.yml.draft
cv_model/: predict.py
docs/: ProjectGoal.md  Report.md  _config.yml  index.md  version.json
docs/data-preparation/: index.md
docs/deployment/: index.md
docs/notebooks/: index.md  preparing-dataset.html
docs/performance-evaluation/: index.md
docs/project-overview/: index.md
docs/training-model/: index.md
foai-model/: pyproject.toml
foai_model/predict/: predict.py
foai_model/train/: train.py
notebooks/: preparing-dataset.ipynb
scripts/: __init__.py  push_to_hf.py  scripts.py
train/: train.py
